@@ -3,7 +3,9 @@ Changes in openair 0.5-25 [2012-03-16]
 *	Fix bug when type = "wd" - would add missing data to north
 	sector
 *	Add observed histogram to conditionalQuantile
-*`	Fix bug in timeAverage when ws was not available but wd was
+*	Fix bug in timeAverage when ws was not available but wd was
+*	Temporaryfix to GoogleMapsPlot documentation due to new
+	package version
 
 Changes in openair 0.5-23 [2012-02-28]
 =====================================
